sql alchemy cleanup and made vis.py be hidden. Fixed dibbler username input sanitation

--- a/template/base.html
+++ b/template/base.html
@@ -8,6 +8,9 @@
 	<body>
 		<div id="container">
 			<div id="body">
+				<center><p>
+					<u><i>This site is still under development, do not expect it to work.</i></u>
+				</p></center>
 <!--=============================================================================================-->
 <!--BODY-->
 <!--=============================================================================================-->
