Added support for ssl keys, did some work on the randomredirect api, hid randimg

--- a/template/base.html
+++ b/template/base.html
@@ -22,7 +22,7 @@
 					<a href="https://github.com/Programvareverkstedet"><img src="/template/github.svg"/> Github</a> 
 					<a href="https://dev.pvv.ntnu.no/projects/pvv-dev/"><img src="/template/cog.svg"/> Dev-Tracker</a> 
 					<br/>
-					spis meg
+					wip
 				</div>
 				<p style="text-align:right;">
 					Programvareverkstedet<br/>
