--- a/template/base.html
+++ b/template/base.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<!doctype html>
 <html>
 	<head>
 		<title><!--TITLE--></title>
