--- a/template/base.html
+++ b/template/base.html
@@ -8,9 +8,10 @@
 	<body>
 		<div id="container">
 			<div id="body">
-				<center><p>
+				<br/>
+				<!--<center><p>
 					<u><i>This site is still under development, do not expect it to work.</i></u>
-				</p></center>
+				</p></center>-->
 <!--=============================================================================================-->
 <!--BODY-->
 <!--=============================================================================================-->
@@ -21,8 +22,9 @@
 					<a href="https://www.facebook.com/pvvntnu"><img src="/template/facebook.svg"/> Facebook</a>
 					<a href="https://github.com/Programvareverkstedet"><img src="/template/github.svg"/> Github</a> 
 					<a href="https://dev.pvv.ntnu.no/projects/pvv-dev/"><img src="/template/cog.svg"/> Dev-Tracker</a> 
-					<br/>
-					wip
+					
+					<!--<br/>
+					wip-->
 				</div>
 				<p style="text-align:right;">
 					Programvareverkstedet<br/>
